Fix #22 linewrapping

--- a/endive-gui/Interface/assets/styles/codemirror.css
+++ b/endive-gui/Interface/assets/styles/codemirror.css
@@ -1,4 +1,3 @@
-.cm-editor {margin:30px; height:100%;}
 .cm-editor.cm-focused { outline: None; }
 .cm-content{font-size:25px;}
 .cm-editor .cm-gutters{background-color:#FFFFFF; border-right: 0px;}
